// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyTheme renders correctly 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); cursor: pointer; display: flex; flex-direction: row; padding: 16px 16px 16px 16px;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    id="id-test"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Remember me
  </div>
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; color: rgb(87, 79, 235); cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`modes renders correctly for applyTheme 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(238, 237, 253); cursor: pointer; display: flex; flex-direction: row; padding: 16px 16px 16px 16px;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`modes renders correctly for overrides 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); cursor: pointer; display: flex; flex-direction: row; padding: 16px 16px 16px 16px;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`modes should render correctly when colorMode is set globally 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; background-color: rgb(239, 68, 68); color: rgb(238, 237, 253); cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`modes should render correctly when colorMode set as prop 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; background-color: rgb(239, 68, 68); color: rgb(238, 237, 253); cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`overrides should render correctly 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); cursor: pointer; display: flex; flex-direction: row; padding: 16px 16px 16px 16px;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    id="id-test"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Remember me
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    id="id-test"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Remember me
  </div>
</div>
`;

exports[`theming Switch.Label.styles.base should render correctly 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    id="id-test"
    style="background-color: rgb(239, 68, 68); color: rgb(22, 30, 46); font-size: 16px;"
  >
    Remember me
  </div>
</div>
`;

exports[`theming Switch.Toggle.styles.base should render correctly 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(239, 68, 68); cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    id="id-test"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Remember me
  </div>
</div>
`;

exports[`theming Switch.styles.base should render correctly 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; background-color: rgb(239, 68, 68); cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    id="id-test"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Remember me
  </div>
</div>
`;

exports[`variants renders correctly for applyTheme 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(239, 68, 68); cursor: pointer; display: flex; flex-direction: row; padding: 16px 16px 16px 16px;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`variants renders correctly for overrides 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); cursor: pointer; display: flex; flex-direction: row; padding: 16px 16px 16px 16px;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`variants should render correctly for default variant 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    id="id-test"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Remember me
  </div>
</div>
`;

exports[`variants should render correctly for ghost variant 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    id="id-test"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Remember me
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
<div
  aria-labelledby="id-test"
  class="css-view-1dbjc4n"
  role="checkbox"
  style="align-items: center; background-color: rgb(239, 68, 68); cursor: pointer; display: flex; flex-direction: row;"
  tabindex="0"
>
  <div
    class="css-view-1dbjc4n"
    style="cursor: pointer; height: 20px; margin-right: 8px; user-select: none; width: 40px;"
  >
    <div
      class="css-view-1dbjc4n"
      style="background-color: rgb(217, 217, 225); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; bottom: 0px; height: 70%; left: 0px; margin: auto auto auto auto; position: absolute; right: 0px; top: 0px; transition-duration: 0.1s; width: 100%;"
    />
    <div
      class="css-view-1dbjc4n"
      style="align-self: flex-start; background-color: rgb(255, 255, 255); border-top-left-radius: 100%; border-top-right-radius: 100%; border-bottom-right-radius: 100%; border-bottom-left-radius: 100%; box-shadow: 0px 1px 3px rgba(0,0,0,0.5); height: 20px; left: 0%; margin-left: 0px; transform: translateZ(0px); transition-duration: 0.1s; width: 20px;"
    />
    <input
      role="switch"
      style="bottom: 0px; cursor: inherit; height: 100%; left: 0px; margin: 0px 0px 0px 0px; opacity: 0; padding: 0px 0px 0px 0px; position: absolute; right: 0px; top: 0px; width: 100%;"
      type="checkbox"
    />
  </div>
</div>
`;
